Fixed spacing

--- a/app/static/css/dashborad.css
+++ b/app/static/css/dashborad.css
@@ -163,6 +163,8 @@ body
 {
 	height: 49.5%;
 	width: 99.2%;
+	padding-left: 10px;
+	padding-top: 5px;
 }
 .chart
 {
